corrigindo o bug de atualizarfazaenda
